change so the new header format is opt-in with new DataSonnet (the language) version, re-add support for old headers with old version, and fix up lost disablequotes support for CSVs

--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,11 @@
             <artifactId>jackson-dataformat-csv</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-properties</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
         <!-- plugin deps: end -->
 
         <dependency>
