--- a/pom.xml
+++ b/pom.xml
@@ -16,14 +16,12 @@
     limitations under the License.
 
 -->
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.ms3-inc</groupId>
     <artifactId>datasonnet-mapper</artifactId>
-    <version>0.7.0-SNAPSHOT</version>
+    <version>0.7.0</version>
 
     <name>DataSonnet Mapper</name>
     <description>A transformation domain specific language</description>
@@ -68,7 +66,7 @@
         <connection>scm:git:https://github.com/MS3Inc/datasonnet-mapper.git</connection>
         <developerConnection>scm:git:https://github.com/MS3Inc/datasonnet-mapper.git</developerConnection>
         <url>https://github.com/MS3Inc/datasonnet-mapper</url>
-        <tag>HEAD</tag>
+        <tag>0.7.0</tag>
     </scm>
     <distributionManagement>
         <repository>
