--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <groupId>com.ms3-inc</groupId>
     <artifactId>datasonnet-mapper</artifactId>
-    <version>0.7.0</version>
+    <version>0.7.1-SNAPSHOT</version>
 
     <name>DataSonnet Mapper</name>
     <description>A transformation domain specific language</description>
@@ -66,7 +66,7 @@
         <connection>scm:git:https://github.com/MS3Inc/datasonnet-mapper.git</connection>
         <developerConnection>scm:git:https://github.com/MS3Inc/datasonnet-mapper.git</developerConnection>
         <url>https://github.com/MS3Inc/datasonnet-mapper</url>
-        <tag>0.7.0</tag>
+        <tag>HEAD</tag>
     </scm>
     <distributionManagement>
         <repository>
