--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,6 +25,20 @@ jobs:
           java-version: ${{ matrix.java }}
       - name: mvn clean verify
         run: ./mvnw -V --no-transfer-progress --batch-mode clean verify
+  verify-benchmarks:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          # needed for license-plugin to check last modified date of each file
+          fetch-depth: 0
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: verify benchmarks
+        run: ./mvnw clean package -DskipTests exec:exec -Dexec.executable="java" -Dexec.classpathScope="test" -Dexec.args="-classpath %classpath com.datasonnet.benchmarks.BenchmarkMain --verify"
   deploy:
     if: github.ref == 'refs/heads/main'
     needs: [ build ]
